--- a/adobepgallery.html
+++ b/adobepgallery.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free wysiwyg web page development software download</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-40" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 6rem; padding-bottom: 1.5rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple wysiwyg site creator software</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-40" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 6rem; padding-bottom: 1.5rem;">
     <!-- Filter -->
     
 
@@ -221,7 +221,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="yFxRsk0emknrE13J1XE9tLYD5uc9Gu0VL/Rske9RlZYEBTxh0gWQPkxSpdDJlKHw3m05pmRVbYLGtQgruL5xsIe4qwRgkYIVWW8XNYlO3u11+LtLJA87YSWm8PHHG7M+" data-form-email="true">
+                    <input type="hidden" value="tw3Lj/TBtXcbwAMrgrrralvTyXmTyQ7cr5wNmS4hwl0zQ241WnGit796PMKVmGReHFXeK7swBjhXxLYqIF9hg6Bh/L1UXMFFz+fQQGOqQOearfj5u3Lb1GAUiOs42Q0u" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
